[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="*"
rand = "*"
radians = "*"
progress = "*" 

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
